# glwpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.cfg  imgui.ini  main.cpp  main_old.cpp  memory_leak_report.txt  package-lock.json  package.json  suppression_drmem.txt  test_vop.cpp  vld.ini
html/: _action_8hpp.html  _action_8hpp_source.html  _array_8hpp.html  _array_8hpp_source.html  _buffer_map_access_8hpp.html  _buffer_map_access_8hpp_source.html  _buffer_map_range_access_8hpp.html  _buffer_map_range_access_8hpp_source.html  _buffer_param_8hpp.html  _buffer_param_8hpp_source.html  _buffer_storage_flag_8hpp.html  _buffer_storage_flag_8hpp_source.html  _buffer_type_8hpp.html  _buffer_type_8hpp_source.html  _buffer_usage_8hpp.html  _buffer_usage_8hpp_source.html  _button_8hpp.html  _button_8hpp_source.html  _camera_8hpp.html  _camera_8hpp_source.html  _context_8hpp.html  _context_8hpp_source.html  _counter_list_8hpp.html  _counter_list_8hpp_source.html  _ctx_buffer_8hpp.html  _ctx_buffer_8hpp_source.html  _ctx_object_8hpp.html  _ctx_object_8hpp_source.html  _ctx_program_8hpp.html  _ctx_program_8hpp_source.html  _ctx_shader_8hpp.html  _ctx_shader_8hpp_source.html  _ctx_texture_8hpp.html  _ctx_texture_8hpp_source.html  _ctx_vertex_array_8hpp.html  _ctx_vertex_array_8hpp_source.html  _data_type_8hpp.html  _data_type_8hpp_source.html  _draw_mode_8hpp.html  _draw_mode_8hpp_source.html  (+347 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+114 more)
include/glwpp/: Attribute.hpp  Buffer.hpp  BufferTyped.hpp  Drawer.hpp  Model.hpp  Object.hpp  Renderer.hpp  Shader.hpp  Tex2D.hpp  Vertex.hpp  Window.hpp  WindowData.hpp
include/glwpp/Context/: Event.h  KeyMode.h  Keyboard.h  Mouse.h  MouseKey.h  Timer.h  Window.h  WindowParam.h
include/glwpp/ctx/: Camera.hpp  Context.hpp  ContextData.hpp  Keyboard.hpp  Mouse.hpp  Renderer.hpp  Window.hpp
include/glwpp/drawer/: Camera.hpp  ModelHash.hpp
include/glwpp/enums/: Capability.hpp  Key.hpp  KeyMod.hpp  KeyModifier.hpp  Mouse.hpp  MouseBtn.hpp
include/glwpp/glfw/: Window.hpp
include/glwpp/input/: Keyboard.hpp  Mouse.hpp  System.hpp
include/glwpp/model/: Attrubute.hpp  Mesh.hpp  MeshAttribute.hpp  MeshAttributeData.hpp  MeshConfig.hpp  MeshEnums.hpp  MeshInfo.hpp  (+6 more)
latex/: _action_8hpp.tex  _action_8hpp_source.tex  _array_8hpp.tex  _array_8hpp_source.tex  _buffer_map_access_8hpp.tex  _buffer_map_access_8hpp_source.tex  _buffer_map_range_access_8hpp.tex  _buffer_map_range_access_8hpp_source.tex  _buffer_param_8hpp.tex  _buffer_param_8hpp_source.tex  _buffer_storage_flag_8hpp.tex  _buffer_storage_flag_8hpp_source.tex  _buffer_type_8hpp.tex  _buffer_type_8hpp_source.tex  _buffer_usage_8hpp.tex  _buffer_usage_8hpp_source.tex  _button_8hpp.tex  _button_8hpp_source.tex  _camera_8hpp.tex  _camera_8hpp_source.tex  _context_8hpp.tex  _context_8hpp_source.tex  _counter_list_8hpp.tex  _counter_list_8hpp_source.tex  _ctx_buffer_8hpp.tex  _ctx_buffer_8hpp_source.tex  _ctx_object_8hpp.tex  _ctx_object_8hpp_source.tex  _ctx_program_8hpp.tex  _ctx_program_8hpp_source.tex  _ctx_shader_8hpp.tex  _ctx_shader_8hpp_source.tex  _ctx_texture_8hpp.tex  _ctx_texture_8hpp_source.tex  _ctx_vertex_array_8hpp.tex  _ctx_vertex_array_8hpp_source.tex  _data_type_8hpp.tex  _data_type_8hpp_source.tex  _draw_mode_8hpp.tex  _draw_mode_8hpp_source.tex  (+238 more)
old/src/: Drawer.cpp  Model.cpp
shaders/: vertex_2d.fs  vertex_2d.vs  vertex_3d.fs  vertex_3d.vs
src/: Context.cpp  Context.hpp  Drawer.cpp  Drawer.hpp  GLapi.cpp  GLapi.hpp  Model.cpp  Window.cpp
src/Context/: Keyboard.cpp  Mouse.cpp  Timer.cpp  Window.cpp  WindowParam.cpp
src/GLapi/: Const.hpp  Glad.hpp
src/context/: CallOptimizer.hpp  CtxExec.hpp  CtxObj.hpp  CtxObjOld.hpp  CtxWrapper.hpp  Valuable.hpp  Value.hpp
src/ctx/: Camera.cpp  Context.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
src/drawer/: Camera.cpp  Camera.hpp  ImGuiApi.cpp  ImGuiApi.hpp  ModelHash.cpp  ModelState.cpp
src/gl/: GlBase.cpp  GlBase.hpp  GlDirect.cpp  GlDirect.hpp  GlIndirect.cpp  GlIndirect.hpp  Interface.hpp  InterfaceGl.hpp  InterfaceGlInner.cpp  InterfaceGlInner.hpp  InterfaceGlOuter.cpp  InterfaceGlOuter.hpp  InterfaceInner.cpp  InterfaceInner.hpp  InterfaceOuter.cpp  InterfaceOuter.hpp  Value.hpp
src/gl_object/: Buffer.cpp  Buffer.hpp  BufferStruct.hpp  BufferVector.hpp  Handler.hpp  Object.hpp  ObjectDeleter.hpp  ObjectHandle.hpp  ObjectRef.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/glfw/: Window.cpp
src/imgui/: FileBrowser.cpp  FileBrowser.hpp  ImGuiApi.cpp  ImGuiApi.hpp
src/input/: Keyboard.cpp  Mouse.cpp  System.cpp
src/metric/: Category.cpp  Category.hpp  TimedArray.cpp  TimedArray.hpp  Value.cpp  Value.hpp
src/model/: Mesh.cpp  Mesh.hpp  MeshAttribute.cpp  MeshAttribute.hpp  MeshAttributeContainer.hpp  MeshAttributeData.cpp  MeshConfig.cpp  MeshIndexData.cpp  MeshIndices.cpp  MeshIndices.hpp  MeshInfo.cpp  MeshVertexArray.cpp  MeshVertexArray.hpp  MeshVertexConfig.cpp  MeshVertexData.cpp  Model.cpp  Model.hpp  ModelNode.cpp
src/st/: Buffer.cpp  Buffer.hpp
src/test/: Drawer.cpp  Drawer.hpp  ImGuiMainTest.hpp  TestMenu.cpp  TestMenu.hpp
src/utils/: Camera.cpp  Camera2.hpp  CmdLoop.cpp  CmdQueue.cpp  CmdQueue.hpp  CmdThread.cpp  Event.hpp  Export.hpp  FuncWrapper.hpp  GlobalThreadPool.cpp  GlobalThreadPool.hpp  MethodWrapper.hpp  Metrics.cpp  Metrics.hpp  Ptr.hpp  Ref.hpp  SharedObject.hpp  SrcLoc.cpp  SrcLoc.hpp  TState.hpp  Transform2.hpp  Value.hpp  ValueOld.hpp  WeakPtr.hpp
test/: CMakeLists.txt  draw_glyph.cpp  func_wrapper.cpp
test/utils/event/: test_CmdLoop.cpp  test_Runner.cpp  test_Watcher.cpp
(+234 files in other folders)
